@@ -1,3 +1,10 @@
+2011-05-18  Ivan Maidanski  <ivmai@mail.ru>
+
+	* checksums.c (GC_check_blocks, GC_check_dirty): Do log printing
+	only if GC_print_stats; print errors using GC_err_printf.
+	* checksums.c (GC_check_blocks): Join adjacent printf() calls into
+	a single one.
+
 2011-05-17  Ivan Maidanski  <ivmai@mail.ru>
 
 	* pthread_support.c (pthread_join): Add assertion (check thread is
